updated to text

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
 
         <div id="cssTap">
-        <p id="testText" href="">css</p>
-        <p id="testText2" href="">tap</p>
+        <p id="testText" href="">Tips&</p>
+        <p id="testText2" href="">Tricss</p>
             </div>
 
        
